[package]
name = "scribe-rs"
version = "1.0.0"
authors = ["Adam Morgan <adammm@netflix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.104"
serde_json = "1.0"
serde_derive = "1.0.104"
shrust = "0.0.7"
rust-crypto = "0.2.36"
walkdir = "2.3.1"
termcolor = "1.1.0"

